@@ -4,6 +4,10 @@
 
 Issue tracker and source for [Balanced Eternal](https://www.curseforge.com/minecraft/modpacks/balanced-eternal), a Minecraft modpack.
 
-This branch is the updated version of BE that is currently heavily WIP and not recommended for survival. If you want to test it out feel free to download the [latest release](https://github.com/WFPhantom/Balanced-Eternal/releases/tag/1.0.0-alpha.11) and use InstanceSync. Please report any issues you encounter after making sure they are not listed on the [Project Board](https://github.com/users/WFPhantom/projects/4)
+This branch is the updated version of BE that is currently heavily WIP and not recommended for survival. If you want to test it out feel free to download the [latest release](https://github.com/WFPhantom/Balanced-Eternal/releases/tag/1.0.0-alpha.13) and use InstanceSync. Please report any issues you encounter after making sure they are not listed on the [Project Board](https://github.com/users/WFPhantom/projects/4)
+
+The modpack is tested to work with Java 25, feel free to download adoptium from the launcher of your choice and use the following flags for best performance:
+
+`-XX:+UseZGC -XX:+UseCompactObjectHeaders`
 
 Make sure to do regular backups and practice good modding skills.
